build: add stage code
