# application/shop/api/shop/v1/shop_http.pb.go
@@ -20,27 +20,27 @@ var _ = binding.EncodeURL
 
 const _ = http.SupportPackageIsVersion1
 
-const OperationShopCaptcha = "/shop.proto.v1.Shop/Captcha"
-const OperationShopDetail = "/shop.proto.v1.Shop/Detail"
-const OperationShopLogin = "/shop.proto.v1.Shop/Login"
-const OperationShopRegister = "/shop.proto.v1.Shop/Register"
+const OperationShopServiceCaptcha = "/shop.v1.ShopService/Captcha"
+const OperationShopServiceDetail = "/shop.v1.ShopService/Detail"
+const OperationShopServiceLogin = "/shop.v1.ShopService/Login"
+const OperationShopServiceRegister = "/shop.v1.ShopService/Register"
 
-type ShopHTTPServer interface {
+type ShopServiceHTTPServer interface {
 	Captcha(context.Context, *emptypb.Empty) (*CaptchaReply, error)
 	Detail(context.Context, *emptypb.Empty) (*UserDetailResponse, error)
 	Login(context.Context, *LoginReq) (*RegisterReply, error)
 	Register(context.Context, *RegisterReq) (*RegisterReply, error)
 }
 
-func RegisterShopHTTPServer(s *http.Server, srv ShopHTTPServer) {
+func RegisterShopServiceHTTPServer(s *http.Server, srv ShopServiceHTTPServer) {
 	r := s.Route("/")
-	r.POST("/api/users/register", _Shop_Register0_HTTP_Handler(srv))
-	r.POST("/api/users/login", _Shop_Login0_HTTP_Handler(srv))
-	r.GET("/api/users/captcha", _Shop_Captcha0_HTTP_Handler(srv))
-	r.GET("/api/users/detail", _Shop_Detail0_HTTP_Handler(srv))
+	r.POST("/api/users/register", _ShopService_Register0_HTTP_Handler(srv))
+	r.POST("/api/users/login", _ShopService_Login0_HTTP_Handler(srv))
+	r.GET("/api/users/captcha", _ShopService_Captcha0_HTTP_Handler(srv))
+	r.GET("/api/users/detail", _ShopService_Detail0_HTTP_Handler(srv))
 }
 
-func _Shop_Register0_HTTP_Handler(srv ShopHTTPServer) func(ctx http.Context) error {
+func _ShopService_Register0_HTTP_Handler(srv ShopServiceHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
 		var in RegisterReq
 		if err := ctx.Bind(&in); err != nil {
@@ -49,7 +49,7 @@ func _Shop_Register0_HTTP_Handler(srv ShopHTTPServer) func(ctx http.Context) err
 		if err := ctx.BindQuery(&in); err != nil {
 			return err
 		}
-		http.SetOperation(ctx, OperationShopRegister)
+		http.SetOperation(ctx, OperationShopServiceRegister)
 		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
 			return srv.Register(ctx, req.(*RegisterReq))
 		})
@@ -62,7 +62,7 @@ func _Shop_Register0_HTTP_Handler(srv ShopHTTPServer) func(ctx http.Context) err
 	}
 }
 
-func _Shop_Login0_HTTP_Handler(srv ShopHTTPServer) func(ctx http.Context) error {
+func _ShopService_Login0_HTTP_Handler(srv ShopServiceHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
 		var in LoginReq
 		if err := ctx.Bind(&in); err != nil {
@@ -71,7 +71,7 @@ func _Shop_Login0_HTTP_Handler(srv ShopHTTPServer) func(ctx http.Context) error 
 		if err := ctx.BindQuery(&in); err != nil {
 			return err
 		}
-		http.SetOperation(ctx, OperationShopLogin)
+		http.SetOperation(ctx, OperationShopServiceLogin)
 		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
 			return srv.Login(ctx, req.(*LoginReq))
 		})
@@ -84,13 +84,13 @@ func _Shop_Login0_HTTP_Handler(srv ShopHTTPServer) func(ctx http.Context) error 
 	}
 }
 
-func _Shop_Captcha0_HTTP_Handler(srv ShopHTTPServer) func(ctx http.Context) error {
+func _ShopService_Captcha0_HTTP_Handler(srv ShopServiceHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
 		var in emptypb.Empty
 		if err := ctx.BindQuery(&in); err != nil {
 			return err
 		}
-		http.SetOperation(ctx, OperationShopCaptcha)
+		http.SetOperation(ctx, OperationShopServiceCaptcha)
 		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
 			return srv.Captcha(ctx, req.(*emptypb.Empty))
 		})
@@ -103,13 +103,13 @@ func _Shop_Captcha0_HTTP_Handler(srv ShopHTTPServer) func(ctx http.Context) erro
 	}
 }
 
-func _Shop_Detail0_HTTP_Handler(srv ShopHTTPServer) func(ctx http.Context) error {
+func _ShopService_Detail0_HTTP_Handler(srv ShopServiceHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
 		var in emptypb.Empty
 		if err := ctx.BindQuery(&in); err != nil {
 			return err
 		}
-		http.SetOperation(ctx, OperationShopDetail)
+		http.SetOperation(ctx, OperationShopServiceDetail)
 		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
 			return srv.Detail(ctx, req.(*emptypb.Empty))
 		})
@@ -122,26 +122,26 @@ func _Shop_Detail0_HTTP_Handler(srv ShopHTTPServer) func(ctx http.Context) error
 	}
 }
 
-type ShopHTTPClient interface {
+type ShopServiceHTTPClient interface {
 	Captcha(ctx context.Context, req *emptypb.Empty, opts ...http.CallOption) (rsp *CaptchaReply, err error)
 	Detail(ctx context.Context, req *emptypb.Empty, opts ...http.CallOption) (rsp *UserDetailResponse, err error)
 	Login(ctx context.Context, req *LoginReq, opts ...http.CallOption) (rsp *RegisterReply, err error)
 	Register(ctx context.Context, req *RegisterReq, opts ...http.CallOption) (rsp *RegisterReply, err error)
 }
 
-type ShopHTTPClientImpl struct {
+type ShopServiceHTTPClientImpl struct {
 	cc *http.Client
 }
 
-func NewShopHTTPClient(client *http.Client) ShopHTTPClient {
-	return &ShopHTTPClientImpl{client}
+func NewShopServiceHTTPClient(client *http.Client) ShopServiceHTTPClient {
+	return &ShopServiceHTTPClientImpl{client}
 }
 
-func (c *ShopHTTPClientImpl) Captcha(ctx context.Context, in *emptypb.Empty, opts ...http.CallOption) (*CaptchaReply, error) {
+func (c *ShopServiceHTTPClientImpl) Captcha(ctx context.Context, in *emptypb.Empty, opts ...http.CallOption) (*CaptchaReply, error) {
 	var out CaptchaReply
 	pattern := "/api/users/captcha"
 	path := binding.EncodeURL(pattern, in, true)
-	opts = append(opts, http.Operation(OperationShopCaptcha))
+	opts = append(opts, http.Operation(OperationShopServiceCaptcha))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
 	if err != nil {
@@ -150,11 +150,11 @@ func (c *ShopHTTPClientImpl) Captcha(ctx context.Context, in *emptypb.Empty, opt
 	return &out, err
 }
 
-func (c *ShopHTTPClientImpl) Detail(ctx context.Context, in *emptypb.Empty, opts ...http.CallOption) (*UserDetailResponse, error) {
+func (c *ShopServiceHTTPClientImpl) Detail(ctx context.Context, in *emptypb.Empty, opts ...http.CallOption) (*UserDetailResponse, error) {
 	var out UserDetailResponse
 	pattern := "/api/users/detail"
 	path := binding.EncodeURL(pattern, in, true)
-	opts = append(opts, http.Operation(OperationShopDetail))
+	opts = append(opts, http.Operation(OperationShopServiceDetail))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
 	if err != nil {
@@ -163,11 +163,11 @@ func (c *ShopHTTPClientImpl) Detail(ctx context.Context, in *emptypb.Empty, opts
 	return &out, err
 }
 
-func (c *ShopHTTPClientImpl) Login(ctx context.Context, in *LoginReq, opts ...http.CallOption) (*RegisterReply, error) {
+func (c *ShopServiceHTTPClientImpl) Login(ctx context.Context, in *LoginReq, opts ...http.CallOption) (*RegisterReply, error) {
 	var out RegisterReply
 	pattern := "/api/users/login"
 	path := binding.EncodeURL(pattern, in, false)
-	opts = append(opts, http.Operation(OperationShopLogin))
+	opts = append(opts, http.Operation(OperationShopServiceLogin))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
 	if err != nil {
@@ -176,11 +176,11 @@ func (c *ShopHTTPClientImpl) Login(ctx context.Context, in *LoginReq, opts ...ht
 	return &out, err
 }
 
-func (c *ShopHTTPClientImpl) Register(ctx context.Context, in *RegisterReq, opts ...http.CallOption) (*RegisterReply, error) {
+func (c *ShopServiceHTTPClientImpl) Register(ctx context.Context, in *RegisterReq, opts ...http.CallOption) (*RegisterReply, error) {
 	var out RegisterReply
 	pattern := "/api/users/register"
 	path := binding.EncodeURL(pattern, in, false)
-	opts = append(opts, http.Operation(OperationShopRegister))
+	opts = append(opts, http.Operation(OperationShopServiceRegister))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
 	if err != nil {
