# application/shop/internal/server/http.go
@@ -6,6 +6,7 @@ import (
 	"github.com/go-kratos/kratos/v2/middleware/logging"
 	"github.com/go-kratos/kratos/v2/middleware/selector"
 	"github.com/go-kratos/kratos/v2/middleware/validate"
+	jwt2 "github.com/golang-jwt/jwt/v4"
 	"github.com/gorilla/handlers"
 	"shop/internal/conf"
 	"shop/internal/service"
@@ -14,17 +15,15 @@ import (
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/http"
 
-	jwt2 "github.com/golang-jwt/jwt/v4"
-
 	v1 "shop/api/shop/v1"
 )
 
 // NewWhiteListMatcher 设置白名单，不需要 token 验证的接口
 func NewWhiteListMatcher() selector.MatchFunc {
 	whiteList := make(map[string]struct{})
-	whiteList["/shop.shop.v1.Shop/Captcha"] = struct{}{}
-	whiteList["/shop.shop.v1.Shop/Login"] = struct{}{}
-	whiteList["/shop.shop.v1.Shop/Register"] = struct{}{}
+	whiteList["/shop.v1.ShopService/Captcha"] = struct{}{}
+	whiteList["/shop.v1.ShopService/Login"] = struct{}{}
+	whiteList["/shop.v1.ShopService/Register"] = struct{}{}
 	return func(ctx context.Context, operation string) bool {
 		if _, ok := whiteList[operation]; ok {
 			return false
@@ -42,12 +41,12 @@ func NewHTTPServer(
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
-			validate.Validator(), // 接口访问的参数校验
 			selector.Server( // jwt 验证
 				jwt.Server(func(token *jwt2.Token) (interface{}, error) {
 					return []byte(ac.JwtKey), nil
 				}, jwt.WithSigningMethod(jwt2.SigningMethodHS256)),
 			).Match(NewWhiteListMatcher()).Build(),
+			validate.Validator(), // 接口访问的参数校验
 			logging.Server(logger),
 			// tracing.Server(), // 链路追踪
 		),
@@ -67,6 +66,6 @@ func NewHTTPServer(
 		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
 	}
 	srv := http.NewServer(opts...)
-	v1.RegisterShopHTTPServer(srv, s)
+	v1.RegisterShopServiceHTTPServer(srv, s)
 	return srv
 }
